--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cidades-estados-brasil-json": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "regenerator-runtime": "^0.13.11",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
